@@ -1,3 +1,11 @@
+2009-04-07  higepon  <higepon@users.sourceforge.jp>
+
+        * OSCompat.cpp (getEnv)(getEnvAlist): Added for Linux and OS X.
+
+        * OSCompatTest.cpp : Added.
+
+        * OScompat.h : Added.
+
 2009-04-06  higepon  <higepon@users.sourceforge.jp>
 
         * Bignum.h: FreeBSD has no __WORDSIZE ?.
